Added github workflow